--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src=''>
+                    <img src='PHOTO.png'>
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-tittle">About Me</h1>
@@ -130,7 +130,7 @@
                 <a href=""><i class="fa-brands fa-instagram"></i></a>
                 <a href=""><i class="fa-brands fa-linkedin"></i></a>
             </div>
-            <a href="https://drive.google.com/file/d/19Y1J49rP4zuM6vjzVw4M73hp-Rv5Dfv9/view?usp=drivesdk" class="btn btn2">Download CV</a>
+            <a href="https://drive.google.com/file/d/1cdUTUqvX2Z3UaDXs0qOC3uU8EbOclaPy/view?usp=drivesdk" class="btn btn2">Download CV</a>
             </div>
             <div class="contact-right">
                 <form>
